# prompt-optimizer

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
data/: test.jsonl
docs/plans/: implementation-plan.md  iterative-refinement-implementation.md  option-b-d-deep-analysis.md  prompt-optimization-system-design.md  test-feedback-strategy.md  training-set-workflow.md
examples/customer-service/: config.toml  heldout_test.jsonl  optimization_result.json  output_sample_optimization_result.json  test.jsonl  train.jsonl  validation.jsonl
examples/demo/: config.toml  heldout_test.jsonl  optimization_result.json  test.jsonl  train.jsonl  validation.jsonl
examples/sentiment_analysis/: config.toml  heldout_test.jsonl  optimization_result.json  test.jsonl  train.jsonl  validation.jsonl
src/cli/: main.py
src/evaluator/: feedback_analyzer.py  test_runner.py
src/optimizer/: meta_optimizer.py  models.py  optimization_memory.py  prompts.py
src/orchestrator/: optimization_loop.py  prompt_history.py
src/providers/: anthropic.py  base.py
